# Dual_Pathway_RL_songbird

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_remya.yml
Archives/: analysis copy.ipynb  benchmarks_SA_dontuse.py  requirements_atharv.txt
Benchmarks/: Analysis-combined.ipynb  analysis.ipynb  benchmark_params.yaml  benchmarks.py  test.ipynb
Benchmarks_old_2/: Analysis-combined.ipynb  run_bench.sh
CAF_exp/: Figures.ipynb  env_lite.py  model.py  params.json  robustness.py
Figures/: Fig_raster.ipynb  Figure_1.ipynb  Figure_1D_raster.ipynb  Figure_2.ipynb  Figure_3.ipynb  Figure_4.ipynb  Figure_5.ipynb  Figure_6.ipynb  Figure_7.ipynb  Figure_8_robustness.ipynb  Figure_lesion_mosaic.ipynb  fig7_state_sweep.py  multi_syll.py
Figures_old/: Figure_2.ipynb
JSON/: for_figures.ipynb
Lesion_exp/: analysis.ipynb  env_lite.py  functions.py  lesion.py  lesion_params.yaml  lesion_testing.ipynb  make_json.py  params.json  robustness.py
Model/: Figure_2.ipynb  Figure_3.ipynb  Figure_4.ipynb  Figure_5.ipynb  Figure_6.ipynb  Figure_7.ipynb  Figures.ipynb  Untitled-1.ipynb  colors.py  env2.py  env_figs.py  env_lite.py  functions.py  making_better.ipynb  params.json  params_3.json  params_3_10.json  params_3_20.json  params_3_5.json  params_3_50.json  params_3_single.json  params_4_jumps.json  params_4_nojumps.json  params_6.json
Robustness/: Figures.ipynb  all_rewards.ipynb  analysis.ipynb  analysis_new.ipynb  analysis_old.ipynb  deepdive copy 2.ipynb  env.py  env_figs.py  env_lite.py  env_robust.py  make_json.py  multi_syll.py  (+6 more)
(+488 files in other folders)
