[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_pathway_model"
version = "0.1.0"
authors = [
    { name = "Atharv Suryawanshi" }
]
description = "A minimal Python package"
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.23",
    "scipy>=1.8",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "tqdm>=4.65",
]

# -------------------------
# setuptools configuration
# -------------------------

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
